downgraded to java 17 to make multi-stage build compatible